--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jquery": "^3.7.1",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7"
   }
 }
